<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:background="@color/bg"
            android:layout_height="match_parent">
        <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                                                               android:layout_marginBottom="7dp"
                                                               android:layout_marginLeft="7dp"
                                                               android:id="@+id/queryTil"
                                                               android:layout_marginRight="7dp"
                                                               android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText android:layout_width="match_parent"
                                                                     android:layout_height="wrap_content"
                                                                     android:id="@+id/queryEt"
                                                                     android:hint="@string/search_hint"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.v7.widget.RecyclerView
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:id="@+id/rv_main_home"
                android:layout_below="@id/queryTil"
                android:layout_margin="8dp"
                android:layout_above="@+id/progressBar_home"
                android:background="@color/bg"
                android:layout_height="wrap_content">
        </android.support.v7.widget.RecyclerView>
        <ProgressBar
                android:layout_width="@dimen/progress_bar_dimen"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/_7dp_"
                android:visibility="gone"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:id="@+id/progressBar_home"
                android:layout_height="50dp"/>
        <!--<LinearLayout-->
                <!--android:id="@+id/progressBar_home"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="0dp"-->
                <!--android:layout_gravity="center_horizontal|bottom"-->
                <!--android:layout_below="@id/queryTil"-->
                <!--android:background="@color/bg"-->
                <!--android:layout_alignParentBottom="true"-->
                <!--android:gravity="center_horizontal|bottom"-->
                <!--android:orientation="vertical"-->
                <!--android:visibility="gone">-->

            <!--<ProgressBar-->
                    <!--android:id="@+id/loading"-->
                    <!--android:layout_width="48dp"-->
                    <!--android:layout_height="48dp" />-->

            <!--<TextView-->
                    <!--android:layout_width="fill_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_gravity="center"-->
                    <!--android:layout_marginTop="5dp"-->
                    <!--android:gravity="center"-->
                    <!--android:text="@string/loading"-->
                    <!--android:textSize="13sp"-->
                    <!--android:textStyle="bold" />-->
        <!--</LinearLayout>-->
    </RelativeLayout>
</layout>